--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -33,5 +33,9 @@
   "delete_warning_comment_beginning": "The record belonging to car",
   "delete_warning_comment_end": "will be deleted. This will not effect any other record belonging to the same car, but it will delete the record selected.",
   "delete_warning_deleteButton": "DELETE",
-  "delete_warning_deleteCancel": "CANCEL"
+  "delete_warning_deleteCancel": "CANCEL",
+  "change_lanuage_alert_title": "Restarting The App is Required",
+  "change_language_alert_text": "For the changes to be applied, you need to restart the app. Next time you launch the app the changes will be applied.",
+  "change_language_alert_now": "Restart Now",
+  "change_language_alert_later": "Restart Later"
 }
